# data-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-colab.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
agents/: data_describer.py  qa_agent.py
data/: load_datasets.py  sbti_20250804.parquet  sbti_20250831.parquet
data_agent/agent/: actions.py  agent.py  connection.py  environment.py  memory.py
data_agent/agents/: data_analyst.py  data_describer.py  diff_agent.py  qa_agent.py
data_agent/utils/: io_utils.py  logger.py
notebooks/: 01_experiment_simple_agent_loop.ipynb  02_run_agents.ipynb  03_run_qa_agent
src/agent/: actions.py  actions_old.py  agent.py  environment.py  goals.py  memory.py
src/agents/: data_describer.py
tests/: test_actions.py  test_agent.py
